--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+/target/
+/.setting/
+/.idea/*
+**/.idea/workspace.xml
+**/.idea/tasks.xml
+/.classpath
+/.project
+/hackthon.iml
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
