--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,27 +2,42 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
-    <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/spring/root-context.xml</param-value>
+        <param-value>classpath:spring*.xml</param-value>
     </context-param>
-    <!--
-        <context-param>
-            <param-name>log4jConfigLocation</param-name>
-            <param-value>/WEB-INF/log4j.properties</param-value>
-        </context-param>
-    -->
-    <!--
-        <listener>
-            <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-        </listener>
-         -->
-            <!-- Creates the Spring Container shared by all Servlets and Filters -->
+
+    <context-param>
+        <param-name>log4JConfiguration</param-name>
+        <param-value>classpath:log4j.properties</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    </listener>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
+    <!--Enable file encoding for utf-8-->
+    <filter>
+        <filter-name>FileEncodingUTF8</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>FileEncodingUTF8</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
 
     <!-- Processes application requests -->
     <servlet>
@@ -30,12 +45,12 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/spring/appServlet/application-context.xml</param-value>
+            <param-value>classpath:spring-context.xml</param-value>
         </init-param>
-        <load-on-startup>2</load-on-startup>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
-     <session-config>
+    <session-config>
         <session-timeout>20</session-timeout>
     </session-config>
     <servlet-mapping>
