--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.oracle.emqa</groupId>
-    <artifactId>voteonline</artifactId>
-    <name>voteOnline</name>
+    <groupId>com.done.analytics</groupId>
+    <artifactId>webanalytics</artifactId>
+    <name>webAnalytics</name>
     <packaging>war</packaging>
     <version>1.0</version>
     <properties>
