--- a/webApps/pom.xml
+++ b/webApps/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>webApps</artifactId>
+    <packaging>war</packaging>
 
     <dependencies>
         <!-- Spring -->
