--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
     <artifactId>webAnalytics</artifactId>
     <name>webAnalytics</name>
     <modules>
-
         <module>webKafka</module>
         <module>webSpark</module>
         <module>webApps</module>
@@ -15,10 +14,7 @@
     <version>1.0</version>
     <properties>
         <java-version>1.7</java-version>
-        <springframework.version>4.0.6.RELEASE</springframework.version>
-        <hibernate.version>4.3.6.Final</hibernate.version>
-        <mysql.version>5.1.31</mysql.version>
-        <joda-time.version>2.3</joda-time.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <testng.version>6.9.4</testng.version>
         <mockito.version>1.10.19</mockito.version>
         <log4j2.version>2.0.2</log4j2.version>
@@ -37,12 +33,54 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-web</artifactId>
-            <version>2.0.2</version>
+            <version>${log4j2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.10</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.joda</groupId>
+            <artifactId>joda-convert</artifactId>
+            <version>1.8.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jzlib</artifactId>
+            <version>1.1.3</version>
         </dependency>
     </dependencies>
     <build>
@@ -66,8 +104,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <compilerArgument>-Xlint:all</compilerArgument>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
