--- a/webKafka/pom.xml
+++ b/webKafka/pom.xml
@@ -17,6 +17,17 @@
             <artifactId>kafka_2.10</artifactId>
             <version>0.9.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.33.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
